Partial work for create an account
Partial work for create an account screen done. Crashes on attempt to go to the screen. May not be needed.

--- a/app/src/main/res/layout/activity_data.xml
+++ b/app/src/main/res/layout/activity_data.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#DD000000"
     tools:context=".data">
 
     <TextView
@@ -12,9 +13,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:text="Login"
-        android:textSize="35dp"
+        android:text="@string/login"
+        android:textSize="35sp"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/enter" />
 
@@ -25,9 +28,9 @@
         android:layout_below="@+id/textview"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="96dp"
-        android:text="Tutorials point"
+        android:text="@string/android_calculator"
         android:textColor="#ff7aff24"
-        android:textSize="35dp"
+        android:textSize="35sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -37,11 +40,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
         android:focusable="true"
-        android:hint="Enter Name"
+        android:hint="@string/enter_name"
         android:textColorHighlight="#ff7eff15"
         android:textColorHint="#ffff25e6"
         app:layout_constraintEnd_toEndOf="parent"
@@ -54,11 +55,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/editText"
         android:layout_alignEnd="@+id/editText"
-        android:layout_alignRight="@+id/editText"
         android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
         android:ems="10"
-        android:hint="Password"
+        android:hint="@string/password"
         android:inputType="textPassword"
         android:textColorHint="#ffff299f"
         app:layout_constraintEnd_toEndOf="parent"
@@ -72,9 +71,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/editText2"
         android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:text="Attempts Left:"
-        android:textSize="25dp"
+        android:text="@string/attempts_left"
+        android:textSize="25sp"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -87,8 +86,9 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="16dp"
         android:layout_toStartOf="@+id/textview"
-        android:layout_toLeftOf="@+id/textview"
-        android:text="login"
+        android:text="@string/login"
+        android:background="@drawable/circle"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.114"
@@ -103,13 +103,27 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="16dp"
         android:layout_toEndOf="@+id/textview"
-        android:layout_toRightOf="@+id/textview"
-        android:text="Cancel"
+        android:text="@string/cancel"
+        android:background="@drawable/circle"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.808"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <Button
+        android:id="@+id/createacc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="56dp"
+        android:text="@string/create_account"
+        android:background="@drawable/circle"
+        android:textColor="#000000"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <TextView
         android:id="@+id/textView3"
@@ -118,12 +132,12 @@
         android:layout_alignTop="@+id/textView2"
         android:layout_alignBottom="@+id/textView2"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
         android:layout_toEndOf="@+id/textview"
-        android:layout_toRightOf="@+id/textview"
         android:text="New Text"
-        android:textSize="25dp"
+        android:textColor="@color/white"
+        android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
